[package]
name = "mapplot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# google
#serde = { version = "1.0", features = ["derive"] }
#serde_with = { version = "1.11", features = ["macros"] }
#serde_json = "1.0"

#typed-builder = "0.9"
#derive_builder = "0.10"